Legg til sjekk på Altinn rettigheter til innlogget bruker for bedriftsstatistikk endepunkt